deployment/k8s/backend/base/istio/allow-ingress-authorization-policy.yaml
# SPDX-License-Identifier: Apache-2.0
# © Crown Copyright 2026. This work has been developed by the National Digital Twin Programme and is legally attributed to the Department for Business and Trade (UK) as the governing entity.

apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-nova-backend
spec:
  selector:
    matchLabels:
      io.kompose.service: nova-backend
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/istio-ingress/sa/istio-ingress"]
      to:
        - operation:
            methods: ["GET", "PATCH", "POST", "PUT"]
      when:
        - key: request.auth.claims[groups]
          values:
            - nova_access
